bcomp-assembler/src/main/java/ru/ifmo/cs/bcomp/grammar/BCompNGParser.java
package ru.ifmo.cs.bcomp.grammar;

import java.util.List;
import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;
import ru.ifmo.cs.bcomp.grammar.BCompNGListener;
import ru.ifmo.cs.bcomp.grammar.BCompNGVisitor;

public class BCompNGParser extends Parser {

   protected static final DFA[] _decisionToDFA;
   protected static final PredictionContextCache _sharedContextCache;
   public static final int T__0 = 1;
   public static final int T__1 = 2;
   public static final int T__2 = 3;
   public static final int T__3 = 4;
   public static final int T__4 = 5;
   public static final int T__5 = 6;
   public static final int T__6 = 7;
   public static final int T__7 = 8;
   public static final int T__8 = 9;
   public static final int T__9 = 10;
   public static final int ORG = 11;
   public static final int WORD = 12;
   public static final int END = 13;
   public static final int DUP = 14;
   public static final int AND = 15;
   public static final int OR = 16;
   public static final int ADD = 17;
   public static final int ADC = 18;
   public static final int SUB = 19;
   public static final int CMP = 20;
   public static final int LOOP = 21;
   public static final int LD = 22;
   public static final int SWAM = 23;
   public static final int JUMP = 24;
   public static final int CALL = 25;
   public static final int ST = 26;
   public static final int NOP = 27;
   public static final int HLT = 28;
   public static final int CLA = 29;
   public static final int NOT = 30;
   public static final int CLC = 31;
   public static final int CMC = 32;
   public static final int ROL = 33;
   public static final int ROR = 34;
   public static final int ASL = 35;
   public static final int ASR = 36;
   public static final int SXTB = 37;
   public static final int SWAB = 38;
   public static final int INC = 39;
   public static final int DEC = 40;
   public static final int NEG = 41;
   public static final int POP = 42;
   public static final int POPF = 43;
   public static final int RET = 44;
   public static final int IRET = 45;
   public static final int PUSH = 46;
   public static final int PUSHF = 47;
   public static final int SWAP = 48;
   public static final int BEQ = 49;
   public static final int BNE = 50;
   public static final int BMI = 51;
   public static final int BPL = 52;
   public static final int BCS = 53;
   public static final int BCC = 54;
   public static final int BVS = 55;
   public static final int BVC = 56;
   public static final int BLT = 57;
   public static final int BGE = 58;
   public static final int BR = 59;
   public static final int DI = 60;
   public static final int EI = 61;
   public static final int IN = 62;
   public static final int OUT = 63;
   public static final int INT = 64;
   public static final int SP = 65;
   public static final int IP = 66;
   public static final int NAME = 67;
   public static final int DECIMAL = 68;
   public static final int HEX = 69;
   public static final int COMMENT = 70;
   public static final int STRING = 71;
   public static final int EOL = 72;
   public static final int WS = 73;
   public static final int RULE_prog = 0;
   public static final int RULE_line = 1;
   public static final int RULE_instructionLine = 2;
   public static final int RULE_instruction = 3;
   public static final int RULE_directive = 4;
   public static final int RULE_orgAddress = 5;
   public static final int RULE_wordDirective = 6;
   public static final int RULE_wordArguments = 7;
   public static final int RULE_wordArgument = 8;
   public static final int RULE_dupArgument = 9;
   public static final int RULE_count = 10;
   public static final int RULE_lbl = 11;
   public static final int RULE_label = 12;
   public static final int RULE_dev = 13;
   public static final int RULE_operand = 14;
   public static final int RULE_directAbsolute = 15;
   public static final int RULE_indirect = 16;
   public static final int RULE_postIncrement = 17;
   public static final int RULE_preDecrement = 18;
   public static final int RULE_displacementSP = 19;
   public static final int RULE_directRelative = 20;
   public static final int RULE_directLoad = 21;
   public static final int RULE_address = 22;
   public static final int RULE_string = 23;
   public static final int RULE_name = 24;
   public static final int RULE_number = 25;
   public static final int RULE_comment = 26;
   public static final int RULE_addr = 27;
   public static final int RULE_nonaddr = 28;
   public static final int RULE_branch = 29;
   public static final int RULE_io = 30;
   public static final int RULE_sp = 31;
   public static final int RULE_ip = 32;
   public static final int RULE_org = 33;
   public static final int RULE_word = 34;
   public static final int RULE_dup = 35;
   public static final int RULE_end = 36;
   public static final String[] ruleNames;
   private static final String[] _LITERAL_NAMES;
   private static final String[] _SYMBOLIC_NAMES;
   public static final Vocabulary VOCABULARY;
   @Deprecated
   public static final String[] tokenNames;
   public static final ATN _ATN;


   private static String[] makeRuleNames() {
      return new String[]{"prog", "line", "instructionLine", "instruction", "directive", "orgAddress", "wordDirective", "wordArguments", "wordArgument", "dupArgument", "count", "lbl", "label", "dev", "operand", "directAbsolute", "indirect", "postIncrement", "preDecrement", "displacementSP", "directRelative", "directLoad", "address", "string", "name", "number", "comment", "addr", "nonaddr", "branch", "io", "sp", "ip", "org", "word", "dup", "end"};
   }

   private static String[] makeLiteralNames() {
      return new String[]{null, "\',\'", "\'$\'", "\'?\'", "\'(\'", "\')\'", "\':\'", "\'+\'", "\'-\'", "\'&\'", "\'#\'"};
   }

   private static String[] makeSymbolicNames() {
      return new String[]{null, null, null, null, null, null, null, null, null, null, null, "ORG", "WORD", "END", "DUP", "AND", "OR", "ADD", "ADC", "SUB", "CMP", "LOOP", "LD", "SWAM", "JUMP", "CALL", "ST", "NOP", "HLT", "CLA", "NOT", "CLC", "CMC", "ROL", "ROR", "ASL", "ASR", "SXTB", "SWAB", "INC", "DEC", "NEG", "POP", "POPF", "RET", "IRET", "PUSH", "PUSHF", "SWAP", "BEQ", "BNE", "BMI", "BPL", "BCS", "BCC", "BVS", "BVC", "BLT", "BGE", "BR", "DI", "EI", "IN", "OUT", "INT", "SP", "IP", "NAME", "DECIMAL", "HEX", "COMMENT", "STRING", "EOL", "WS"};
   }

   @Deprecated
   public String[] getTokenNames() {
      return tokenNames;
   }

   public Vocabulary getVocabulary() {
      return VOCABULARY;
   }

   public String getGrammarFileName() {
      return "BCompNG.g4";
   }

   public String[] getRuleNames() {
      return ruleNames;
   }

   public String getSerializedATN() {
      return "悋Ꜫ脳맭䅼㯧瞆奤Kì\t\t\t\t\t\t\b\t\b\t\t\t\n\t\n\t\f\t\f\r\t\r\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t \t !\t!\"\t\"#\t#$\t$%\t%&\t&N\nQ\n\fTZ\n]\na\nm\nr\nw\ny\n\b\b~\n\b\b\b\b\b\n\b\t\t\t\t\n\t\f\t\t\t\n\n\n\n\n\n\n\n\f\f\r\r\rª\n¯\nÇ\n  !!\"\"##$$%%&&&\'\b\n\f \"$&(*,.02468:<>@BDFHJFG2>?3=@BâRY\\\bl\nx\fz} © ®\"°$´&¹(Æ*È,Ê.Í0Ï2Ñ4Ó6Õ8×:Ù<Û>Ý@ßBáDãFåHçJéLNMLMNNOOQJPMQTRPRSSTRUZ6VZWZ\nXZ\rYUYVYWYXZ[]\r\\[\\]]^^`\b_a6`_`aabc8cddmem:fg<ghhmij> jkkmlblelflim\tnoD#oq\fpr6qpqrrysy\btvJ&uw6vuvwwyxnxsxtyz{.{\r|~\r}|}~~F$\t6\n\n4\fH%\n4\b2 ¡4¡¢ª £ª\"¤ª$¥ª&¦ª(§ª*¨ª,©¢©£©¤©¥©¦©§©¨ª«¯.¬­­¯®«®¬¯!°±±²²³³#´µµ¶¶··¸\t¸%¹º\nº»»¼¼½½\'¾¿¿Ç4ÀÁÁÂ@!ÂÃ\tÃÄ4ÄÅÅÇÆ¾ÆÀÇ)ÈÉÉ+ÊË\fËÌ4Ì-ÍÎ4Î/ÏÐIÐ1ÑÒEÒ3ÓÔ\tÔ5ÕÖHÖ7×Ø\tØ9ÙÚ\tÚ;ÛÜ\tÜ=ÝÞ\tÞ?ßàCàAáâDâCãä\räEåææGçèèIéêêKMRY\\`lqvx}©®Æ";
   }

   public ATN getATN() {
      return _ATN;
   }

   public BCompNGParser(TokenStream input) {
      super(input);
      this._interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
   }

   public final BCompNGParser.ProgContext prog() throws RecognitionException {
      BCompNGParser.ProgContext _localctx = new BCompNGParser.ProgContext(this._ctx, this.getState());
      this.enterRule(_localctx, 0, 0);

      try {
         this.enterOuterAlt(_localctx, 1);
         this.setState(80);
         this._errHandler.sync(this);

         for(int _la = this._input.LA(1); (_la - 11 & -64) == 0 && (1L << _la - 11 & 2972375754064527351L) != 0L; _la = this._input.LA(1)) {
            this.setState(75);
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if((_la - 11 & -64) == 0 && (1L << _la - 11 & 666532744850833399L) != 0L) {
               this.setState(74);
               this.line();
            }

            this.setState(77);
            this.match(72);
            this.setState(82);
            this._errHandler.sync(this);
         }
      } catch (RecognitionException var7) {
         _localctx.exception = var7;
         this._errHandler.reportError(this, var7);
         this._errHandler.recover(this, var7);
      } finally {
         this.exitRule();
      }

      return _localctx;
   }

   public final BCompNGParser.LineContext line() throws RecognitionException {
      BCompNGParser.LineContext _localctx = new BCompNGParser.LineContext(this._ctx, this.getState());
      this.enterRule(_localctx, 2, 1);

      try {
         this.setState(87);
         this._errHandler.sync(this);
         switch(((ParserATNSimulator)this.getInterpreter()).adaptivePredict(this._input, 2, this._ctx)) {
         case 1:
            this.enterOuterAlt(_localctx, 1);
            this.setState(83);
            this.comment();
            break;
         case 2:
            this.enterOuterAlt(_localctx, 2);
            this.setState(84);
            this.instructionLine();
            break;
         case 3:
            this.enterOuterAlt(_localctx, 3);
            this.setState(85);
            this.directive();
            break;
         case 4:
            this.enterOuterAlt(_localctx, 4);
            this.setState(86);
            this.lbl();
         }
      } catch (RecognitionException var6) {
         _localctx.exception = var6;
         this._errHandler.reportError(this, var6);
         this._errHandler.recover(this, var6);
      } finally {
         this.exitRule();
      }

      return _localctx;
   }

   public final BCompNGParser.InstructionLineContext instructionLine() throws RecognitionException {
      BCompNGParser.InstructionLineContext _localctx = new BCompNGParser.InstructionLineContext(this._ctx, this.getState());
      this.enterRule(_localctx, 4, 2);

      try {
         this.enterOuterAlt(_localctx, 1);
         this.setState(90);
         this._errHandler.sync(this);
         int _la = this._input.LA(1);
         if(_la == 67) {
            this.setState(89);
            this.lbl();
         }

         this.setState(92);
         this.instruction();
         this.setState(94);
         this._errHandler.sync(this);
         _la = this._input.LA(1);
         if(_la == 70) {
            this.setState(93);
            this.comment();
         }
      } catch (RecognitionException var7) {
         _localctx.exception = var7;
         this._errHandler.reportError(this, var7);
         this._errHandler.recover(this, var7);
      } finally {
         this.exitRule();
      }

      return _localctx;
   }

   public final BCompNGParser.InstructionContext instruction() throws RecognitionException {
      BCompNGParser.InstructionContext _localctx = new BCompNGParser.InstructionContext(this._ctx, this.getState());
      this.enterRule(_localctx, 6, 3);

      try {
         this.setState(106);
         this._errHandler.sync(this);
         switch(this._input.LA(1)) {
         case 15:
         case 16:
         case 17:
         case 18:
         case 19:
         case 20:
         case 21:
         case 22:
         case 23:
         case 24:
         case 25:
         case 26:
            this.enterOuterAlt(_localctx, 1);
            this.setState(96);
            this.addr();
            this.setState(97);
            this.operand();
            break;
         case 27:
         case 28:
         case 29:
         case 30:
         case 31:
         case 32:
         case 33:
         case 34:
         case 35:
         case 36:
         case 37:
         case 38:
         case 39:
         case 40:
         case 41:
         case 42:
         case 43:
         case 44:
         case 45:
         case 46:
         case 47:
         case 48:
         case 60:
         case 61:
            this.enterOuterAlt(_localctx, 2);
            this.setState(99);
            this.nonaddr();
            break;
         case 49:
         case 50:
         case 51:
         case 52:
         case 53:
         case 54:
         case 55:
         case 56:
         case 57:
         case 58:
         case 59:
            this.enterOuterAlt(_localctx, 3);
            this.setState(100);
            this.branch();
            this.setState(101);
            this.label();
            break;
         case 62:
         case 63:
         case 64:
            this.enterOuterAlt(_localctx, 4);
            this.setState(103);
            this.io();
            this.setState(104);
            this.dev();
            break;
         default:
            throw new NoViableAltException(this);
         }
      } catch (RecognitionException var6) {
         _localctx.exception = var6;
         this._errHandler.reportError(this, var6);
         this._errHandler.recover(this, var6);
      } finally {
         this.exitRule();
      }

      return _localctx;
   }

   public final BCompNGParser.DirectiveContext directive() throws RecognitionException {
      BCompNGParser.DirectiveContext _localctx = new BCompNGParser.DirectiveContext(this._ctx, this.getState());
      this.enterRule(_localctx, 8, 4);

      try {
         this.setState(118);
         this._errHandler.sync(this);
         int _la;
         switch(this._input.LA(1)) {
         case 11:
            this.enterOuterAlt(_localctx, 1);
            this.setState(108);
            this.org();
            this.setState(109);
            this.orgAddress();
            this.setState(111);
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la == 70) {
               this.setState(110);
               this.comment();
            }
            break;
         case 12:
         case 67:
            this.enterOuterAlt(_localctx, 2);
            this.setState(113);
            this.wordDirective();
            break;
         case 13:
            this.enterOuterAlt(_localctx, 3);
            this.setState(114);
            this.end();
            this.setState(116);
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la == 70) {
               this.setState(115);
               this.comment();
            }
            break;
         default:
            throw new NoViableAltException(this);
         }
      } catch (RecognitionException var7) {
         _localctx.exception = var7;
         this._errHandler.reportError(this, var7);
         this._errHandler.recover(this, var7);
      } finally {
         this.exitRule();
      }

      return _localctx;
   }

   public final BCompNGParser.OrgAddressContext orgAddress() throws RecognitionException {
      BCompNGParser.OrgAddressContext _localctx = new BCompNGParser.OrgAddressContext(this._ctx, this.getState());
      this.enterRule(_localctx, 10, 5);

      try {
         this.enterOuterAlt(_localctx, 1);
         this.setState(120);
         this.address();
      } catch (RecognitionException var6) {
         _localctx.exception = var6;
         this._errHandler.reportError(this, var6);
         this._errHandler.recover(this, var6);
      } finally {
         this.exitRule();
      }

      return _localctx;
   }

   public final BCompNGParser.WordDirectiveContext wordDirective() throws RecognitionException {
      BCompNGParser.WordDirectiveContext _localctx = new BCompNGParser.WordDirectiveContext(this._ctx, this.getState());
      this.enterRule(_localctx, 12, 6);

      try {
         this.enterOuterAlt(_localctx, 1);
         this.setState(123);
         this._errHandler.sync(this);
         int _la = this._input.LA(1);
         if(_la == 67) {
            this.setState(122);
            this.lbl();
         }

         this.setState(125);
         this.word();
         this.setState(126);
         this.wordArguments();
         this.setState(128);
         this._errHandler.sync(this);
         _la = this._input.LA(1);
         if(_la == 70) {
            this.setState(127);
            this.comment();
         }
      } catch (RecognitionException var7) {
         _localctx.exception = var7;
         this._errHandler.reportError(this, var7);
         this._errHandler.recover(this, var7);
      } finally {
         this.exitRule();
      }

      return _localctx;
   }

   public final BCompNGParser.WordArgumentsContext wordArguments() throws RecognitionException {
      BCompNGParser.WordArgumentsContext _localctx = new BCompNGParser.WordArgumentsContext(this._ctx, this.getState());
      this.enterRule(_localctx, 14, 7);

      try {
         this.enterOuterAlt(_localctx, 1);
         this.setState(130);
         this.wordArgument();
         this.setState(135);
         this._errHandler.sync(this);

         for(int _la = this._input.LA(1); _la == 1; _la = this._input.LA(1)) {
            this.setState(131);
            this.match(1);
            this.setState(132);
            this.wordArgument();
            this.setState(137);
            this._errHandler.sync(this);
         }
      } catch (RecognitionException var7) {
         _localctx.exception = var7;
         this._errHandler.reportError(this, var7);
         this._errHandler.recover(this, var7);
      } finally {
         this.exitRule();
      }

      return _localctx;
   }

   public final BCompNGParser.WordArgumentContext wordArgument() throws RecognitionException {
      BCompNGParser.WordArgumentContext _localctx = new BCompNGParser.WordArgumentContext(this._ctx, this.getState());
      this.enterRule(_localctx, 16, 8);

      try {
         this.setState(143);
         this._errHandler.sync(this);
         switch(((ParserATNSimulator)this.getInterpreter()).adaptivePredict(this._input, 12, this._ctx)) {
         case 1:
            this.enterOuterAlt(_localctx, 1);
            this.setState(138);
            this.number();
            break;
         case 2:
            this.enterOuterAlt(_localctx, 2);
            this.setState(139);
            this.match(2);
            this.setState(140);
            this.label();
            break;
         case 3:
            this.enterOuterAlt(_localctx, 3);
            this.setState(141);
            this.dupArgument();
            break;
         case 4:
            this.enterOuterAlt(_localctx, 4);
            this.setState(142);
            this.match(3);
         }
      } catch (RecognitionException var6) {
         _localctx.exception = var6;
         this._errHandler.reportError(this, var6);
         this._errHandler.recover(this, var6);
      } finally {
         this.exitRule();
      }

      return _localctx;
   }

   public final BCompNGParser.DupArgumentContext dupArgument() throws RecognitionException {
      BCompNGParser.DupArgumentContext _localctx = new BCompNGParser.DupArgumentContext(this._ctx, this.getState());
      this.enterRule(_localctx, 18, 9);

      try {
         this.enterOuterAlt(_localctx, 1);
         this.setState(145);
         this.count();
         this.setState(146);
         this.dup();
         this.setState(147);
         this.match(4);
         this.setState(148);
         this.wordArgument();
         this.setState(149);
         this.match(5);
      } catch (RecognitionException var6) {
         _localctx.exception = var6;
         this._errHandler.reportError(this, var6);
         this._errHandler.recover(this, var6);
      } finally {
         this.exitRule();
      }

      return _localctx;
   }

   public final BCompNGParser.CountContext count() throws RecognitionException {
      BCompNGParser.CountContext _localctx = new BCompNGParser.CountContext(this._ctx, this.getState());
      this.enterRule(_localctx, 20, 10);

      try {
         this.enterOuterAlt(_localctx, 1);
         this.setState(151);
         this.number();
      } catch (RecognitionException var6) {
         _localctx.exception = var6;
         this._errHandler.reportError(this, var6);
         this._errHandler.recover(this, var6);
      } finally {
         this.exitRule();
      }

      return _localctx;
   }

   public final BCompNGParser.LblContext lbl() throws RecognitionException {
      BCompNGParser.LblContext _localctx = new BCompNGParser.LblContext(this._ctx, this.getState());
      this.enterRule(_localctx, 22, 11);

      try {
         this.enterOuterAlt(_localctx, 1);
         this.setState(153);
         this.label();
         this.setState(154);
         this.match(6);
      } catch (RecognitionException var6) {
         _localctx.exception = var6;
         this._errHandler.reportError(this, var6);
         this._errHandler.recover(this, var6);
      } finally {
         this.exitRule();
      }

      return _localctx;
   }

   public final BCompNGParser.LabelContext label() throws RecognitionException {
      BCompNGParser.LabelContext _localctx = new BCompNGParser.LabelContext(this._ctx, this.getState());
      this.enterRule(_localctx, 24, 12);

      try {
         this.enterOuterAlt(_localctx, 1);
         this.setState(156);
         this.name();
      } catch (RecognitionException var6) {
         _localctx.exception = var6;
         this._errHandler.reportError(this, var6);
         this._errHandler.recover(this, var6);
      } finally {
         this.exitRule();
      }

      return _localctx;
   }

   public final BCompNGParser.DevContext dev() throws RecognitionException {
      BCompNGParser.DevContext _localctx = new BCompNGParser.DevContext(this._ctx, this.getState());
      this.enterRule(_localctx, 26, 13);

      try {
         this.enterOuterAlt(_localctx, 1);
         this.setState(158);
         this.number();
      } catch (RecognitionException var6) {
         _localctx.exception = var6;
         this._errHandler.reportError(this, var6);
         this._errHandler.recover(this, var6);
      } finally {
         this.exitRule();
      }

      return _localctx;
   }

   public final BCompNGParser.OperandContext operand() throws RecognitionException {
      BCompNGParser.OperandContext _localctx = new BCompNGParser.OperandContext(this._ctx, this.getState());
      this.enterRule(_localctx, 28, 14);

      try {
         this.setState(167);
         this._errHandler.sync(this);
         switch(((ParserATNSimulator)this.getInterpreter()).adaptivePredict(this._input, 13, this._ctx)) {
         case 1:
            this.enterOuterAlt(_localctx, 1);
            this.setState(160);
            this.directAbsolute();
            break;
         case 2:
            this.enterOuterAlt(_localctx, 2);
            this.setState(161);
            this.indirect();
            break;
         case 3:
            this.enterOuterAlt(_localctx, 3);
            this.setState(162);
            this.postIncrement();
            break;
         case 4:
            this.enterOuterAlt(_localctx, 4);
            this.setState(163);
            this.preDecrement();
            break;
         case 5:
            this.enterOuterAlt(_localctx, 5);
            this.setState(164);
            this.displacementSP();
            break;
         case 6:
            this.enterOuterAlt(_localctx, 6);
            this.setState(165);
            this.directRelative();
            break;
         case 7:
            this.enterOuterAlt(_localctx, 7);
            this.setState(166);
            this.directLoad();
         }
      } catch (RecognitionException var6) {
         _localctx.exception = var6;
         this._errHandler.reportError(this, var6);
         this._errHandler.recover(this, var6);
      } finally {
         this.exitRule();
      }

      return _localctx;
   }

   public final BCompNGParser.DirectAbsoluteContext directAbsolute() throws RecognitionException {
      BCompNGParser.DirectAbsoluteContext _localctx = new BCompNGParser.DirectAbsoluteContext(this._ctx, this.getState());
      this.enterRule(_localctx, 30, 15);

      try {
         this.setState(172);
         this._errHandler.sync(this);
         switch(this._input.LA(1)) {
         case 2:
            this.enterOuterAlt(_localctx, 2);
            this.setState(170);
            this.match(2);
            this.setState(171);
            this.label();
            break;
         case 68:
         case 69:
            this.enterOuterAlt(_localctx, 1);
            this.setState(169);
            this.address();
            break;
         default:
            throw new NoViableAltException(this);
         }
      } catch (RecognitionException var6) {
         _localctx.exception = var6;
         this._errHandler.reportError(this, var6);
         this._errHandler.recover(this, var6);
      } finally {
         this.exitRule();
      }

      return _localctx;
   }

   public final BCompNGParser.IndirectContext indirect() throws RecognitionException {
      BCompNGParser.IndirectContext _localctx = new BCompNGParser.IndirectContext(this._ctx, this.getState());
      this.enterRule(_localctx, 32, 16);

      try {
         this.enterOuterAlt(_localctx, 1);
         this.setState(174);
         this.match(4);
         this.setState(175);
         this.label();
         this.setState(176);
         this.match(5);
      } catch (RecognitionException var6) {
         _localctx.exception = var6;
         this._errHandler.reportError(this, var6);
         this._errHandler.recover(this, var6);
      } finally {
         this.exitRule();
      }

      return _localctx;
   }

   public final BCompNGParser.PostIncrementContext postIncrement() throws RecognitionException {
      BCompNGParser.PostIncrementContext _localctx = new BCompNGParser.PostIncrementContext(this._ctx, this.getState());
      this.enterRule(_localctx, 34, 17);

      try {
         this.enterOuterAlt(_localctx, 1);
         this.setState(178);
         this.match(4);
         this.setState(179);
         this.label();
         this.setState(180);
         this.match(5);
         this.setState(181);
         this.match(7);
      } catch (RecognitionException var6) {
         _localctx.exception = var6;
         this._errHandler.reportError(this, var6);
         this._errHandler.recover(this, var6);
      } finally {
         this.exitRule();
      }

      return _localctx;
   }

   public final BCompNGParser.PreDecrementContext preDecrement() throws RecognitionException {
      BCompNGParser.PreDecrementContext _localctx = new BCompNGParser.PreDecrementContext(this._ctx, this.getState());
      this.enterRule(_localctx, 36, 18);

      try {
         this.enterOuterAlt(_localctx, 1);
         this.setState(183);
         this.match(8);
         this.setState(184);
         this.match(4);
         this.setState(185);
         this.label();
         this.setState(186);
         this.match(5);
      } catch (RecognitionException var6) {
         _localctx.exception = var6;
         this._errHandler.reportError(this, var6);
         this._errHandler.recover(this, var6);
      } finally {
         this.exitRule();
      }

      return _localctx;
   }
